# neural-net

./: .editorconfig  .gitignore  CMakeLists.txt
parsers/: net-bin.js
src/: main.cpp
src/deep_learning/: NeuralNetwork.cpp  NeuralNetwork.hpp
src/math/: Activation.hpp  Calculus.hpp  Matrix2D.hpp
src/utils/: Img.cpp  Img.hpp  ProgressBar.cpp  ProgressBar.hpp  Serialization.hpp
